XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__Duplicate_Warned__e.object
<CustomObject>
    <fields>
        <fullName>CRMfusionDBR101__Record_Id__c</fullName>
        <description>Id of the record that triggered the warning(s).</description>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Id__c</fullName>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__User_Name__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Duplicate Warned</label>
    <pluralLabel>Duplicates Warned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>